--- a/conda_env_python371.yml
+++ b/conda_env_python371.yml
@@ -19,12 +19,27 @@ dependencies:
   - xz=5.2.5=h1de35cc_0
   - zlib=1.2.11=h1de35cc_3
   - pip:
-    - click==7.0
+    - apscheduler==3.8.1
+    - backports-zoneinfo==0.2.1
+    - click==8.0.3
     - dlib==19.19.0
     - face-recognition==1.2.3
     - face-recognition-models==0.3.0
+    - flask==2.0.2
     - freetype-py==2.0.0.post6
+    - importlib-metadata==4.8.2
     - imutils==0.5.1
+    - itsdangerous==2.0.1
+    - jinja2==3.0.3
+    - markupsafe==2.0.1
     - numpy==1.15.4
     - opencv-python==3.4.3.18
     - pillow==5.3.0
+    - pytz==2021.3
+    - pytz-deprecation-shim==0.1.0.post0
+    - six==1.16.0
+    - typing-extensions==4.0.1
+    - tzdata==2021.5
+    - tzlocal==4.1
+    - werkzeug==2.0.2
+    - zipp==3.6.0
