--- a/logging.conf
+++ b/logging.conf
@@ -13,7 +13,7 @@ handlers=fileHandler
 
 [logger_Scheduler]
 level=DEBUG
-handlers=consoleHandler
+handlers=consoleHandler,fileHandler
 qualname=Scheduler
 propagate=0
 
@@ -26,7 +26,7 @@ formatter=Scheduler
 [handler_fileHandler]
 class=FileHandler
 args=('log/logging.log', 'a')
-level=ERROR
+level=INFO
 formatter=Scheduler
 
 [formatter_Scheduler]
