--- a/conda_env_python371.yml
+++ b/conda_env_python371.yml
@@ -25,8 +25,8 @@ dependencies:
     - dlib==19.19.0
     - face-recognition==1.2.3
     - face-recognition-models==0.3.0
+    - freetype-py
     - flask==2.0.2
-    - freetype-py==2.0.0.post6
     - importlib-metadata==4.8.2
     - imutils==0.5.1
     - itsdangerous==2.0.1
