convert json to html table

--- a/logging.conf
+++ b/logging.conf
@@ -24,8 +24,8 @@ level=DEBUG
 formatter=Scheduler
 
 [handler_fileHandler]
-class=FileHandler
-args=('log/logging.log', 'a')
+class=TimedRotatingFileHandler
+args=('log/logging.log', 'midnight', 1, 0)
 level=INFO
 formatter=Scheduler
 
