TimedRotatingFileHandler caused ImportError when startup

--- a/logging.conf
+++ b/logging.conf
@@ -24,8 +24,8 @@ level=DEBUG
 formatter=Scheduler
 
 [handler_fileHandler]
-class=TimedRotatingFileHandler
-args=('log/logging.log', 'midnight', 1, 0)
+class=FileHandler
+args=('log/logging.log', 'a')
 level=INFO
 formatter=Scheduler
 
