--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -1,20 +1,32 @@
 [loggers]
-keys=root,Scheduler
+keys=root,App,Scheduler,DB
 
 [handlers]
 keys=fileHandler,consoleHandler
 
 [formatters]
-keys=Scheduler
+keys=App,Scheduler,DB
 
 [logger_root]
 level=DEBUG
 handlers=fileHandler
 
+[logger_App]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+qualname=App
+propagate=0
+
 [logger_Scheduler]
 level=DEBUG
 handlers=consoleHandler,fileHandler
 qualname=Scheduler
+propagate=0
+
+[logger_DB]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+qualname=DB
 propagate=0
 
 [handler_consoleHandler]
@@ -29,6 +41,14 @@ args=('log/logging.log','a')
 level=INFO
 formatter=Scheduler
 
+[formatter_App]
+format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+datefmt=
+
 [formatter_Scheduler]
+format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+datefmt=
+
+[formatter_DB]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 datefmt=
