--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -1,11 +1,11 @@
 [loggers]
-keys=root,App,Scheduler,DB
+keys=root,App,Config,Scheduler,DB
 
 [handlers]
 keys=fileHandler,consoleHandler
 
 [formatters]
-keys=App,Scheduler,DB
+keys=Shared
 
 [logger_root]
 level=DEBUG
@@ -29,26 +29,24 @@ handlers=consoleHandler,fileHandler
 qualname=DB
 propagate=0
 
+[logger_Config]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+qualname=Config
+propagate=0
+
 [handler_consoleHandler]
 class=StreamHandler
 args=(sys.stdout,)
 level=DEBUG
-formatter=Scheduler
+formatter=Shared
 
 [handler_fileHandler]
 class=FileHandler
 args=('log/logging.log','a')
 level=INFO
-formatter=Scheduler
+formatter=Shared
 
-[formatter_App]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
-datefmt=
-
-[formatter_Scheduler]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
-datefmt=
-
-[formatter_DB]
+[formatter_Shared]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 datefmt=
