add sql for getting cropped images; change logging format for db

--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -2,10 +2,10 @@
 keys=root,App,Config,Scheduler,DB
 
 [handlers]
-keys=fileHandler,consoleHandler
+keys=fileHandler,consoleHandler,fileHandlerWithFunc,consoleHandlerWithFunc
 
 [formatters]
-keys=Shared
+keys=Shared,Func
 
 [logger_root]
 level=DEBUG
@@ -25,7 +25,7 @@ propagate=0
 
 [logger_DB]
 level=DEBUG
-handlers=consoleHandler,fileHandler
+handlers=consoleHandlerWithFunc,fileHandlerWithFunc
 qualname=DB
 propagate=0
 
@@ -47,6 +47,22 @@ args=('log/logging.log','a')
 level=INFO
 formatter=Shared
 
+[handler_consoleHandlerWithFunc]
+class=StreamHandler
+args=(sys.stdout,)
+level=DEBUG
+formatter=Func
+
+[handler_fileHandlerWithFunc]
+class=FileHandler
+args=('log/logging.log','a')
+level=INFO
+formatter=Func
+
 [formatter_Shared]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+datefmt=
+
+[formatter_Func]
+format=%(asctime)s - %(name)s - %(levelname)s - [%(filename)s:%(lineno)s - %(funcName)s() ] - %(message)s
 datefmt=
