put ext db config from env var to config file, add face orm model

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,3 +1,8 @@
 ---
+workspace:
+    dataset: '~/face-club/dataset/'
+database:
+    external: '~/face-club/database.yaml'
+    internal-url: 'sqlite:///~/db/face.db'
 logging:
     path: 'log'
