--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -2,7 +2,10 @@
 workspace:
     dataset: '~/face-club/dataset/'
 database:
-    external: '~/face-club/database.yaml'
-    internal-url: 'sqlite:///~/db/face.db'
+    external:
+        config: '~/face-club/database.yaml'
+        enable: true
+    internal:
+        url: 'sqlite:///~/db/face.db'
 logging:
     path: 'log'
