--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -4,7 +4,7 @@ workspace:
 database:
     external:
         config: '~/face-club/database.yaml'
-        enable: true
+        enable: false
     internal:
         url: 'sqlite:///~/db/face.db'
 logging:
