prepare folders for facial recognition

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,6 +1,8 @@
 ---
 workspace:
     dataset: '~/face-club/dataset/'
+    model: '~/face-club/model/'
+    images: '~/face-club/images/'
 database:
     external:
         config: '~/face-club/database.yaml'
