--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,App,Config,Scheduler,DB
+keys=root,App,Config,Scheduler,DB,FileMove
 
 [handlers]
 keys=fileHandler,consoleHandler,fileHandlerWithFunc,consoleHandlerWithFunc
@@ -21,6 +21,12 @@ propagate=0
 level=DEBUG
 handlers=consoleHandler,fileHandler
 qualname=Scheduler
+propagate=0
+
+[logger_FileMove]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+qualname=FileMove
 propagate=0
 
 [logger_DB]
