copy images from ext vol to workspace and list in web page

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -10,5 +10,6 @@ database:
         fetch-amount: 100
     internal:
         url: 'sqlite:///db/face.db'
+        display-amount: 1000
 logging:
     path: 'log'
