put face detection functions into class

--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,App,Config,Scheduler,DB,FileMove
+keys=root,App,Config,Scheduler,DB,FileMove,FACE
 
 [handlers]
 keys=fileHandler,consoleHandler,fileHandlerWithFunc,consoleHandlerWithFunc
@@ -27,6 +27,12 @@ propagate=0
 level=DEBUG
 handlers=consoleHandler,fileHandler
 qualname=FileMove
+propagate=0
+
+[logger_FACE]
+level=DEBUG
+handlers=consoleHandlerWithFunc,fileHandlerWithFunc
+qualname=FACE
 propagate=0
 
 [logger_DB]
