--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,App,Config,Scheduler,DB,FileMove,FACE
+keys=root,App,Config,Scheduler,DB,FileMove,FACE,WebAPI
 
 [handlers]
 keys=fileHandler,consoleHandler,fileHandlerWithFunc,consoleHandlerWithFunc
@@ -27,6 +27,12 @@ propagate=0
 level=DEBUG
 handlers=consoleHandler,fileHandler
 qualname=FileMove
+propagate=0
+
+[logger_WebAPI]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+qualname=WebAPI
 propagate=0
 
 [logger_FACE]
