link up canvas functions and db operations

--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -31,7 +31,7 @@ propagate=0
 
 [logger_WebAPI]
 level=DEBUG
-handlers=consoleHandler,fileHandler
+handlers=consoleHandlerWithFunc,fileHandlerWithFunc
 qualname=WebAPI
 propagate=0
 
