--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -3,6 +3,7 @@ workspace:
     dataset: '~/face-club/dataset/'
     model: '~/face-club/model/'
     images: '~/face-club/images/'
+    review-images: '~/face-club/review-images/'
 database:
     external:
         config: '~/face-club/database.yaml'
